<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.mymarket.activities.ListaComprasActivity"
    >
    
    <item
        android:id="@+id/menu_atualizar"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="100"
        android:showAsAction="always"/>
    
    <item
     android:id="@+id/menu_novo"
     android:orderInCategory="100"
     android:title="@string/menu_novo"
     app:showAsAction="always"/>    
     
    <item
     android:id="@+id/menu_perfil"
     android:orderInCategory="100"
     android:title="@string/menu_perfil"
     app:showAsAction="always"/>        
     
    <item
        android:id="@+id/menu_lista_compras"
        android:orderInCategory="100"
        android:title="@string/menu_lista_compras"
        app:showAsAction="always"/>      
    
    <item
        android:id="@+id/menu_meus_grupos"
        android:orderInCategory="100"
        android:title="@string/menu_meus_grupos"
        app:showAsAction="always"/>
    
    <!-- <item
        android:id="@+id/menu_meus_lembretes"
        android:orderInCategory="100"
        android:title="@string/menu_meus_lembretes"
        app:showAsAction="always"/>  -->  
    
    <item
        android:id="@+id/menu_configuracoes"
        android:orderInCategory="100"
        android:title="@string/menu_configuracoes"
        app:showAsAction="always"/>    
        
    <item
        android:id="@+id/menu_sair"
        android:orderInCategory="100"
        android:title="@string/menu_sair"
        app:showAsAction="always"/>    
        
</menu>