<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
         >

        <EditText
            android:id="@+id/form_produtos_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_produtos_nome" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/form_produtos_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_produtos_marca" />

        <EditText
            android:id="@+id/form_produtos_quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:hint="@string/form_produtos_quantidade" />
        
       <Button
       	   android:id="@+id/btn_form_produtos"
		   android:text="@string/comum_confirmar"       	   
           style="@style/ShadowText"
       	   android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:background="@drawable/button_background_states"
           android:gravity="center"
           android:onClick="acessarApk"
           android:padding="10dp"
           android:textColor="@color/text"
           android:textSize="20sp"
           android:textStyle="bold" />    	
    </LinearLayout>

</ScrollView>